refactor: update tmvec2 student name

--- a/src/visualization/runtime.ipynb
+++ b/src/visualization/runtime.ipynb
@@ -33,13 +33,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c37babb8-3048-4d83-a7d3-0a096c83d1bb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "methods = ['tmvec1', 'tmvec_student', 'foldseek']\n",
-    "names = ['TM-Vec', 'TM-Vec Student', 'Foldseek']"
+    "methods = ['tmvec1', 'tmvec2', 'tmvec2_student', 'foldseek']\n",
+    "names = ['TM-Vec', 'TM-Vec 2', 'TM-Vec 2 Student', 'Foldseek']"
    ]
   },
   {
@@ -178,14 +178,6 @@
     "fig.tight_layout()\n",
     "fig.savefig('plots/query.svg')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98e6257a-3733-4d37-b2a4-ff58c6c81739",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
